# smith

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  logging.rs  main.rs
src/cli/: agent.rs  args.rs  mod.rs  provider.rs
src/config/: config.template.toml  event_handler.rs  mod.rs  models.rs  models.toml  persistence.rs
src/core/: error.rs  llm.rs  memory.rs  metadata.rs  mod.rs  types.rs
src/core/augmented_llm/: config.rs  mod.rs  runner.rs  stream_accumulator.rs
src/core/prompt/: builder.rs  env.rs  mod.rs
src/permission/: config.rs  manager.rs  mod.rs  security.rs  types.rs  ui_trait.rs
src/providers/: error.rs  factory.rs  mock.rs  mod.rs  types.rs
src/providers/anthropic/: convert.rs  mod.rs  types.rs
src/providers/gemini/: convert.rs  mod.rs  types.rs
src/providers/http/: auth.rs  mod.rs  sse.rs
src/providers/openai/: convert.rs  mod.rs  types.rs
src/providers/openai_compat/: config.rs  convert.rs  mod.rs  types.rs
src/tools/: context.rs  engine.rs  error_hints.rs  events.rs  executor.rs  mod.rs  registry.rs  types.rs
src/tools/fs/: constants.rs  format.rs  glob.rs  grep.rs  list.rs  mod.rs  read.rs  update.rs  utils.rs  write.rs
src/tools/result/: mod.rs
src/tools/shell/: bash.rs  mod.rs
src/tui/: agent_runner.rs  events.rs  layout.rs  mod.rs  permission_ui.rs  state.rs
src/tui/app/: commands.rs  diff.rs  mod.rs  terminal.rs
src/tui/events/: handler.rs  loops.rs  mod.rs
src/tui/state/: history.rs  messages.rs  mod.rs  streaming.rs  tools.rs
src/tui/widgets/: chat.rs  input.rs  mod.rs
src/ui/: diff_widget.rs  markdown_widget.rs  mod.rs  output_widget.rs  permission.rs  theme.rs  tool_card.rs
src/ui/diff/: line_builder.rs  mod.rs  parser.rs  types.rs
src/ui/markdown/: block.rs  context.rs  mod.rs  (+3 more)
tests/: cli.rs  tool_execution.rs
(+32 files in other folders)
